# langchain_goodmem

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-unit.yml  docs-pages.yml  release.yml
docs/: README.md
docs/source/: conf.py  index.md
docs/source/developer/: README.md  architecture.md  getting-started.md  internal-types.md  live-integration-tests.md  test-helpers.md  testing.md  troubleshooting.md  unit-tests.md
docs/source/guides/: README.md  create-space.md  embeddings.md  examples.md  existing-space.md  getting-started.md  resources.md
docs/source/reference/: README.md  api.md
examples/: basic_semantic_search.py  goodmem_embeddings_bootstrap_workflow.py  goodmem_embeddings_workflow.py
src/langchain_goodmem/: __init__.py  connection.py  embeddings.py  errors.py  resources.py  space_embedders.py  vectorstores.py
src/langchain_goodmem/_internal/: __init__.py  memory_ops.py  providers.py  transport.py  types.py  validators.py
tests/: __init__.py  _integration_live_support.py  test_connection_unit.py  test_embeddings_unit.py  test_integration_create_live.py  test_integration_embeddings_live.py  test_integration_existing_space_live.py  test_resources_unit.py  test_transport_unit.py  test_vectorstore_unit.py
